--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,9 @@
   </header>
 
   <main class="page__content">
+
+    <h1 class="visually-hidden">Заголовок первого уровня</h1>
+
     <div class="page__intro-wrapper">
 
       <div class="background-slider">
@@ -81,12 +84,12 @@
 
       <div class="page__overlay"></div>
 
-      <section class="page__section page__section_place_intro">
-        <div class="social-links">
+      <div class="page__section page__section_place_intro">
+        <section class="social-links">
+          <h2 class="visually-hidden">Ссылки на социальные сети</h2>
           <a class="social-links__logo-link" href="#" target="_blank" rel="noopener" title="Дом РФ">
             <img class="social-links__logo-link-image" src="<%=require('./images/dom-rf.png')%>" loading="lazy" alt="Дом РФ">
           </a>
-
 
           <ul class="social-links__list">
             <li class="social-links__list-item">
@@ -118,13 +121,14 @@
               </a>
             </li>
           </ul>
-        </div>
+        </section>
 
         <!-- ! -->
         <!-- TODO: Хоспаде, сложная сетка -->
         <!-- Можно сделать grid-area для всей страницы -->
         <div class="page__section-container">
-          <div class="links-with-preview">
+          <section class="links-with-preview">
+            <h2 class="visually-hidden">Жилые комплексы</h2>
             <ul class="links-with-preview__list">
               <template class="links-with-preview__link-template">
                 <li class="links-with-preview__list-item">
@@ -135,15 +139,15 @@
 
             <figure class="links-with-preview__preview">
               <div class="links-with-preview__image-container">
-                <img class="links-with-preview__image" loading="lazy" alt="preview">
+                <img class="links-with-preview__image" loading="lazy">
               </div>
               <figcaption class="links-with-preview__image-title"></figcaption>
-              <p class="links-with-preview__image-description"></p>
+              <span class="links-with-preview__image-description"></span>
             </figure>
-          </div>
+          </section>
 
-          <div class="intro">
-            <h1 class="intro__title">Стильная архитектура и виды из окон будущей квартиры не оставят равнодушных</h1>
+          <section class="intro">
+            <h2 class="intro__title">Стильная архитектура и виды из окон будущей квартиры не оставят равнодушных</h2>
 
             <div class="intro__toggle-btns">
               <button class="intro__toggle-btn intro__toggle-btn_type_prev" type="button">
@@ -176,9 +180,9 @@
                 </svg>
               </button>
             </div>
-          </div>
+          </section>
         </div>
-      </section>
+      </div>
 
       <section class="filter">
         <form class="filter__form" name="filter">
